--- a/home/package.json
+++ b/home/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.11.0",
+    "axios": "^1.7.2",
     "echarts": "^5.5.1",
     "element-plus": "^2.7.6",
+    "mockjs": "^1.1.0",
     "vue": "^3.4.30",
     "vue-router": "^4.4.0"
   },
