--- a/home/.env
+++ b/home/.env
@@ -1,3 +1,22 @@
-VUE_BASE_API=http://127.0.0.1:8000/api
+# 环境变量 默认开发环境
+VUE_APP_ENV='development'
+# 接口地址
+VUE_APP_BASE_API=/
+# 静态资源地址
 VUE_PUBLIC_PATH=/
+# 版本号
 VUE_APP_VERSION=0.0.1
+# 端口号
+VUE_APP_PORT=9527
+# 构建路径
+VUE_APP_OUTPUT_DIR=dist
+# 构建路径
+VUE_APP_ASSETS_PATH=assets
+# 版权信息
+VUE_APP_COPYRIGHT='Copyright © 2021-present sinvon'
+# 作者
+VUE_APP_AUTHOR='sinvon'
+# 邮箱
+VUE_APP_EMAIL='***@qq.com'
+# 仓库地址
+VUE_APP_REPOSITORY='https://github.com'
