--- a/home/package.json
+++ b/home/package.json
@@ -15,6 +15,7 @@
     "element-plus": "^2.7.6",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
+    "pinia": "^2.1.7",
     "qs": "^6.12.3",
     "vue": "^3.4.30",
     "vue-router": "^4.4.0"
