--- a/home/package.json
+++ b/home/package.json
@@ -14,13 +14,15 @@
     "axios": "^1.7.2",
     "echarts": "^5.5.1",
     "element-plus": "^2.7.6",
+    "emoji-picker-element": "^1.22.7",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "qs": "^6.12.3",
     "vue": "^3.4.30",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
