feat(mybatis-plus): 在 application.yml 中添加 MyBatis-Plus 配置
- 在 BaseEntity 中添加 create_time 和 update_time 字段的自动填充注解
- 修改 MyMetaObjectHandler 以实现更宽松的字段填充
- 更新 UserController 中的代码格式和逻辑

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -36,7 +36,7 @@ logging:
   level:
     com.ruoyi: debug
     org.springframework: warn
-
+    com.baomidou.mybatisplus: debug
 # 用户配置
 user:
   password:
@@ -95,7 +95,7 @@ token:
   # 令牌密钥
   secret: abcdefghijklmnopqrstuvwxyz
   # 令牌有效期（默认30分钟）
-  expireTime: 30
+  expireTime: 3000000
 
 # mybatis-plus配置
 mybatis-plus:
