feat(home): 我的发布页面改版
- 重新设计了页面布局和样式，增加了状态筛选功能
- 添加了编辑对话框，支持修改失物信息
- 优化了数据加载和分页逻辑
- 新增了时间格式化和文本截断等辅助函数

--- a/home/.env
+++ b/home/.env
@@ -20,8 +20,8 @@ VUE_APP_AUTHOR='sinvon'
 VUE_APP_EMAIL='***@qq.com'
 # 仓库地址
 VUE_APP_REPOSITORY='https://github.com'
-# 接口地址
-VITE_API_BASE='/'
+# 后端接口地址
+VITE_BASE_URL=http://localhost/dev-api
 # 请求超时时间
 VUE_APP_REQUEST_TIMEOUT=15000
 VUE_APP_UPLOAD_TIMEOUT=30000
